<resources>
    <string name="app_name">Bill Me Bro</string>
    <string name="action_settings">Settings</string>

    <string name="date_picker_title">Date of crime: </string>
    <string name="photo_dialog_title">Photo</string>
    <string name="empty_group_list">Currently not tracking any groups.\nAdd a group now!</string>
    <string name="new_group">New Group</string>
    <string name="group_type_hint">Work, Personal, etc..</string>
    <string name="add_group_members_edit_text_hint">First Member\nSecond Member\nThird Member</string>
    <string name="group_members_text_view">Group Member(s):</string>
    <string name="group_type_text_view">Group Type:</string>
    <string name="group_name_edit_text_hint">Group Name</string>
    <string name="group_name_text_view">Group Name:</string>
    <string name="group_list_edit_button">EDIT</string>
    <string name="group_created_on_text_view">Group created on:</string>
    <string name="new_receipt">New Receipt</string>
    <string name="delete_receipt">Delete Receipt</string>
    <string name="delete_all_receipts">Remove All Receipts</string>
    <string name="point_symbol">.</string>
    <string name="money_symbol">$</string>
    <string name="bar_change_price">Set the price of the receipt</string>
    <string name="accept_price_change">Accept</string>
    <string name="reject_price_change">Reject</string>
    <string name="menu_summarized_project">Summarization</string>
    <string name="btn_login">Go</string>
    <string name="text_username">Username</string>
</resources>
